added background to login

--- a/login/css/style.css
+++ b/login/css/style.css
@@ -3,7 +3,7 @@ Author: Sajibe Kanti
 
 */
 
-body {font-family:Arial, Sans-Serif;}
+body {background-image:url(background.jpg);font-family:Arial, Sans-Serif;}
 .clearfix:before, .clearfix:after { content: ""; display: table; }
 .clearfix:after { clear: both; }
 a {color:#78b941; text-decoration:none;}
